# open-router-key-viewer

./: .gitignore  AGENTS.md  LICENSE  README.md  open_router_key_viewer.spec  pyproject.toml
.github/workflows/: release.yml
scripts/: github_release.sh  release.sh  run.sh
skills/project-release/: SKILL.md
skills/project-versioning/: SKILL.md
skills/project-versioning/agents/: openai.yaml
src/open_router_key_viewer/: __init__.py  __main__.py  _build_info.py  app.py  i18n.py  models.py  sni_tray.py
src/open_router_key_viewer/core/: about_coordinator.py  app_kernel.py  bootstrap.py  install_coordinator.py  install_runtime.py  progress_runner.py  query_coordinator.py  query_execution_controller.py  query_worker.py  secret_coordinator.py  settings_coordinator.py  shell_coordinator.py  threading.py  update_coordinator.py  update_runtime.py  update_state.py  update_workers.py
src/open_router_key_viewer/services/: __init__.py  about_info.py  alert_service.py  build_info.py  config_store.py  installer.py  openrouter.py  runtime_settings.py  secret_cache.py  (+3 more)
tests/: conftest.py  test_about_info.py  test_alert_service.py  test_app.py  test_build_info.py  test_card_view_model.py  test_config_store.py  test_floating_metrics.py  test_i18n.py  test_installer.py  test_openrouter.py  test_progress_runner.py  test_query_controller.py  test_query_coordinator.py  test_query_pages.py  test_query_view_model.py  test_runtime.py  test_settings_page.py  test_settings_snapshot.py  test_settings_widgets.py  test_single_instance.py  test_update_checker.py  test_update_controller.py
(+24 files in other folders)
